# pairwise_comparison_website

./: .gitignore  Cargo.toml  README.md  pairwise_pairing.txt
assets/templates/: index.html  register_page.html
src/: get_items.rs  items.rs  main.rs
src/account/: mod.rs
src/database/: database.rs
src/general_error/: errors.rs
src/index/: index_controller.rs
src/pair_wise/: mod.rs  pair_wise_controller.rs  pair_wise_service.rs  pair_wise_structs.rs
src/templates/: t.rs
src/user/: mod.rs  user_controller.rs  user_service.rs  user_structs.rs
