[package]
name = "pairwise_comparison_website"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.5"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0.6.6"
lazy_static = "1.5.0"
serde = {version="1.0.203", features=["derive"]}
toml = "0.8.14"
env_logger = "0.11"
log = "0.4"
tera = { version = "1", default-features = false }
rusqlite = { version = "0.32.0", features = ["bundled"] }
